--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,37 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="colorPrimary">#334d5c</color>
+    <color name="black">#B8B8B8</color>
+    <color name="white">#2F2F2F</color>
+    <color name="colorPrimary">#C3C0C0</color>
     <color name="edit_text_background_default_color">#F3F3F3</color>
     <color name="edit_text_background_error_color">#FBD7D7</color>
-    <color name="edit_text_hint_color">#737373</color>
-    <color name="question">#555555</color>
-    <color name="link">#137EB3</color>
-    <color name="code_edit_text">#4C4C4C</color>
-    <color name="textView_error_message">#A51717</color>
-    <color name="red">#7A1B1B</color>
-    <color name="neutral">#285F85</color>
+    <color name="edit_text_hint_color">#EBEBEB</color>
+    <color name="question">#C1C1C1</color>
+    <color name="link">#499DCA</color>
+    <color name="code_edit_text">#9E9D9D</color>
+    <color name="textView_error_message">#E06D6D</color>
+    <color name="red">#832020</color>
+    <color name="neutral">#926627</color>
     <color name="gray">#777676</color>
-    <color name="dark_gray">#353535</color>
+    <color name="dark_gray">#BCBABA</color>
     <color name="soft_gray">#E8E8E8</color>
     <color name="pressed">#ECECEC</color>
-    <color name="layout_main">#F3F0F0</color>
-    <color name="tabIndicatorColor_1">#BD4722</color>
-    <color name="tabSelectedTextColor">#000000</color>
-    <color name="tabTextColor">#BABABA</color>
-    <color name="tabIndicatorColor_2">#115278</color>
-    <color name="tabIndicatorColor_3">#03A9F4</color>
+    <color name="layout_main">#948B8B</color>
+    <color name="tabIndicatorColor_1">#EFEDED</color>
+    <color name="tabSelectedTextColor">#EFEDED</color>
+    <color name="tabTextColor">#5B5B5B</color>
+    <color name="tabIndicatorColor_2">#EFEDED</color>
+    <color name="tabIndicatorColor_3">#EFEDED</color>
     <color name="shimmerBackground">#9F9F9F</color>
     <color name="shimmerHighlight">#66C5C5C5</color>
     <color name="newPost_button">#084F70</color>
-    <color name="nav_default">#A1A1A1</color>
-    <color name="nav_active">#074F70</color>
-    <color name="post_edit_text">#FDFDFD</color>
+    <color name="nav_default">#595858</color>
+    <color name="nav_active">#F2F2F2</color>
+    <color name="post_edit_text">#818181</color>
     <color name="change_icon">#B6B6B6</color>
     <color name="like_active">#B13D3D</color>
     <color name="inactive">#B5B5B5</color>
-    <color name="post_background">#FAFAFA</color>
+    <color name="post_background">#282828</color>
     <color name="audio_wave">#CC4518</color>
     <color name="cross">#6F1815</color>
     <color name="check">#01433C</color>
@@ -43,17 +43,17 @@
     <color name="black_overlay">#66000000</color>
     <color name="moment_background">#66F4F4F4</color>
     <color name="moment_stroke">#CECCCC</color>
-    <color name="light_gray">#F6F6F6</color>
+    <color name="light_gray">#FFFFFF</color>
     <color name="moment_text_back">#4DF6F6F6</color>
     <color name="green">#009688</color>
     <color name="blue">#3F51B5</color>
-    <color name="purple">#9C27B0</color>
+    <color name="purple">#B551C7</color>
     <color name="moment_progress">#C5471F</color>
-    <color name="user_message">#A7CFEF</color>
+    <color name="user_message">#03A9F4</color>
     <color name="yellow">#FFC107</color>
     <color name="option_background">#4D96D7D1</color>
-    <color name="chip_background_pressed">#C53F1A</color>
+    <color name="chip_background_pressed">#FF5722</color>
     <color name="chip_background_default">#E7E7E7</color>
     <color name="chip_text_pressed">#FFFFFF</color>
-    <color name="chip_text_default">#4D161616</color>
+    <color name="chip_text_default">#4D000000</color>
 </resources>
