--- a/app/src/main/res/layout/rv_item_user.xml
+++ b/app/src/main/res/layout/rv_item_user.xml
@@ -77,6 +77,18 @@
         android:layout_gravity="center_vertical" />
 
 
+    <ImageButton
+        android:id="@+id/ib_remove_blacklist"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/ic_delete_blacklist"
+        android:layout_marginEnd="10dp"
+        android:visibility="gone"
+        android:layout_gravity="center">
+
+    </ImageButton>
+
+
 
 
 </LinearLayout>
