added the ability to edit posts in profiles.Now edited posts are marked "edited", the logic of sending to the server has been rewrote (old resource urls are now sent if they have not been changed)

--- a/app/src/main/res/layout/add_post_dialog.xml
+++ b/app/src/main/res/layout/add_post_dialog.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         app:navigationIcon="@drawable/ic_cancel">
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_username"
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"
