--- a/app/src/main/res/layout/fragment_subscribers.xml
+++ b/app/src/main/res/layout/fragment_subscribers.xml
@@ -8,8 +8,18 @@
         android:id="@+id/rv_users"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="15dp"
+        android:visibility="gone"
         >
     </androidx.recyclerview.widget.RecyclerView>
 
+
+
+    <ProgressBar
+        android:id="@+id/pb_loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_gravity="center">
+
+    </ProgressBar>
 </FrameLayout>
