Added a subscription to web socket topics (recent chats and statuses about viewed messages).User response now returns the online and confirmed markers, which are processed by the RecyclerView adapter.When logging into the MessageActivity.kt system, information about reading messages is sent to the server, and the same thing happens in real time.

--- a/app/src/main/res/layout/rv_item_message.xml
+++ b/app/src/main/res/layout/rv_item_message.xml
@@ -10,11 +10,13 @@
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="wrap_content"
+
         android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cw_main"
             android:layout_width="wrap_content"
+
             android:layout_height="wrap_content"
 
 
@@ -201,6 +203,14 @@
                     </TextView>
                 </LinearLayout>
 
+
+                <ImageView
+                    android:id="@+id/iv_viewed_mark"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_not_read">
+
+                </ImageView>
             </LinearLayout>
 
 
