--- a/app/src/main/res/layout/add_channel_post_dialog.xml
+++ b/app/src/main/res/layout/add_channel_post_dialog.xml
@@ -11,8 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:navigationIcon="@drawable/ic_cancel">
+
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_username"
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"
@@ -188,7 +189,19 @@
 
     </LinearLayout>
 
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/tv_reset_poll_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:fontFamily="@font/klukva"
+      android:layout_gravity="center"
+        android:textStyle="bold"
+        android:visibility="gone"
+        android:textColor="@color/black"
+        android:text="@string/reset_poll_info">
 
+    </com.google.android.material.textview.MaterialTextView>
     <EditText
         android:id="@+id/et_post"
         android:layout_width="match_parent"
