--- a/app/src/main/res/layout/rv_item_channel_posts.xml
+++ b/app/src/main/res/layout/rv_item_channel_posts.xml
@@ -30,6 +30,19 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:orientation="vertical">
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_edited"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:gravity="center_horizontal"
+                    android:fontFamily="@font/klukva"
+                    android:layout_marginEnd="5dp"
+                    android:textStyle="bold"
+                    android:visibility="gone"
+                    android:textColor="@color/gray"
+                    android:textSize="15sp"
+                    android:text="@string/edited" />
                 <ImageView
                     android:id="@+id/iv_channel_avatar"
                     android:layout_width="50dp"
