--- a/app/src/main/res/layout/rv_item_channel_posts.xml
+++ b/app/src/main/res/layout/rv_item_channel_posts.xml
@@ -5,7 +5,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="15dp"
     android:paddingBottom="5dp"
-    android:background="@color/post_background"
     android:orientation="vertical">
 
     <LinearLayout
@@ -226,6 +225,9 @@
 
 
 
+
+
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -244,6 +246,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/iv_comment"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_gravity="center_horizontal"
@@ -323,4 +326,38 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/ll_score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:visibility="gone"
+        android:layout_marginEnd="15dp"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/klukva"
+            android:textSize="20sp"
+            android:text="Ваша оценка: ">
+        </com.google.android.material.textview.MaterialTextView>
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:text="5">
+        </com.google.android.material.textview.MaterialTextView>
+
+        <ImageButton
+            android:id="@+id/ib_delete_score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:background="@drawable/ic_delete">
+
+        </ImageButton>
+    </LinearLayout>
 </LinearLayout>
