added scrolling of the message down using the button

--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -71,16 +71,30 @@
     </com.google.android.material.appbar.MaterialToolbar>
 
 
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_message"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        >
+        android:layout_height="match_parent">
     </androidx.recyclerview.widget.RecyclerView>
 
 
+        <ImageButton
+            android:id="@+id/ib_down"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="bottom"
+            android:layout_margin="5dp"
+            android:visibility="gone"
+            android:background="@drawable/ic_down">
 
+        </ImageButton>
+    </FrameLayout>
 
 
 
