A subscription to statuses has been added to chats (prints, records voice, and so on), errors and shortcomings have been fixed.

--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -57,7 +57,7 @@
         android:textStyle="bold"
         android:fontFamily="@font/klukva"
         android:layout_marginStart="10dp"
-        android:visibility="gone"
+      android:visibility="gone"
         android:textColor="@color/gray"
         android:text="">
 
@@ -67,10 +67,21 @@
 
 </LinearLayout>
 
-
     </com.google.android.material.appbar.MaterialToolbar>
 
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/tv_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_gravity="center"
+        android:fontFamily="@font/klukva"
+        android:layout_marginStart="10dp"
+        android:textColor="@color/dark_gray"
+        android:text="">
 
+    </com.google.android.material.textview.MaterialTextView>
 
     <FrameLayout
         android:layout_width="match_parent"
