--- a/app/src/main/res/layout/rv_item_message.xml
+++ b/app/src/main/res/layout/rv_item_message.xml
@@ -6,6 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_marginHorizontal="3dp"
+    android:foreground="?attr/selectableItemBackground"
     android:layout_height="wrap_content">
 
     <FrameLayout
