--- a/app/src/main/res/layout/fragment_subscriptions_posts_feed.xml
+++ b/app/src/main/res/layout/fragment_subscriptions_posts_feed.xml
@@ -4,10 +4,16 @@
     android:layout_height="match_parent"
     tools:context="com.emil.linksy.presentation.ui.navigation.feed.SubscriptionsPostsFeedFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_posts"
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </androidx.recyclerview.widget.RecyclerView>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_posts"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </androidx.recyclerview.widget.RecyclerView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </FrameLayout>
