--- a/app/src/main/res/layout/add_channel_post_dialog.xml
+++ b/app/src/main/res/layout/add_channel_post_dialog.xml
@@ -206,7 +206,7 @@
         android:id="@+id/et_post"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:hint="@string/share_your_thoughts"
+        android:hint="@string/write_something"
         android:layout_marginHorizontal="5dp"
         android:layout_marginBottom="5dp"
         android:gravity="start"
