fixed: the icons of the confirmed and closed channels were overlapping each other.When changing the password in the settings, new tokens are now returned from the server.Added processing of blocked users and channels (a window is displayed)

--- a/app/src/main/res/layout/rv_item_chat.xml
+++ b/app/src/main/res/layout/rv_item_chat.xml
@@ -41,7 +41,8 @@
             android:text=""
             android:textColor="@color/gray"
             android:fontFamily="@font/klukva"
-            android:maxLength="20"
+            android:maxLength="25"
+            android:maxLines="1"
             android:textSize="20sp">
         </com.google.android.material.textview.MaterialTextView>
 
