--- a/app/src/main/res/layout/rv_item_channel.xml
+++ b/app/src/main/res/layout/rv_item_channel.xml
@@ -46,7 +46,7 @@
         app:backgroundTint="@color/gray"
         android:layout_marginStart="5dp"
         android:visibility="gone"
-        app:layout_constraintStart_toEndOf="@id/tv_name"
+        app:layout_constraintStart_toEndOf="@id/iv_confirmed"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/tv_name" />
 
